adicionei configuração do tomcat no dockercompose